--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -24,7 +24,7 @@
   notify: restart httpd
 
 - name: Change permissions
-  file: src={{UNZIP_DEST}} owner=root group=apache mode=0775 recurse=yes
+  file: path={{UNZIP_DEST}} owner=root group=apache mode=0775 recurse=yes
   notify: restart httpd
 
 - name: restart httpd
